--- a/config/_default/menus.ru.toml
+++ b/config/_default/menus.ru.toml
@@ -27,3 +27,9 @@
   name = "Контакты"
   url = "/ru/contact/"
   weight = 5
+
+[[main]]
+  identifier = "blog"
+  name = "Блог"
+  url = "/ru/blog/"
+  weight = 6
