--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -1,29 +1,35 @@
 [[main]]
   identifier = "airport-transfers"
   name = "Airport Transfers"
-  url = "/airport-transfers/"
+  url = "/en/airport-transfers/"
   weight = 1
 
 [[main]]
   identifier = "individual-transfers"
   name = "Individual Transfers"
-  url = "/individual-transfers/"
+  url = "/en/individual-transfers/"
   weight = 2
 
 [[main]]
   identifier = "group-transfers"
   name = "Group Transfers"
-  url = "/group-transfers/"
+  url = "/en/group-transfers/"
   weight = 3
 
 [[main]]
   identifier = "about"
   name = "About"
-  url = "/about/"
+  url = "/en/about/"
   weight = 4
 
 [[main]]
   identifier = "contact"
   name = "Contact"
-  url = "/contact/"
+  url = "/en/contact/"
   weight = 5
+
+[[main]]
+  identifier = "blog"
+  name = "Blog"
+  url = "/en/blog/"
+  weight = 6
