--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -1,35 +1,24 @@
 [[main]]
-  identifier = "airport-transfers"
-  name = "Airport Transfers"
-  url = "/en/airport-transfers/"
+  identifier = "serbia"
+  name = "Serbia"
+  url = "#"
   weight = 1
 
 [[main]]
-  identifier = "individual-transfers"
-  name = "Individual Transfers"
-  url = "/en/individual-transfers/"
-  weight = 2
-
-[[main]]
-  identifier = "group-transfers"
-  name = "Group Transfers"
-  url = "/en/group-transfers/"
-  weight = 3
+  identifier = "kopaonik"
+  name = "Kopaonik"
+  url = "/en/kopaonik/"
+  parent = "serbia"
+  weight = 1
 
 [[main]]
   identifier = "about"
   name = "About"
   url = "/en/about/"
-  weight = 4
+  weight = 2
 
 [[main]]
   identifier = "contact"
   name = "Contact"
   url = "/en/contact/"
-  weight = 5
-
-[[main]]
-  identifier = "blog"
-  name = "Blog"
-  url = "/en/blog/"
-  weight = 6
+  weight = 3
