--- a/config/_default/menus.ru.toml
+++ b/config/_default/menus.ru.toml
@@ -1,35 +1,24 @@
 [[main]]
-  identifier = "airport-transfers"
-  name = "Трансфер из аэропорта"
-  url = "/ru/airport-transfers/"
+  identifier = "serbia"
+  name = "Сербия"
+  url = "#"
   weight = 1
 
 [[main]]
-  identifier = "individual-transfers"
-  name = "Индивидуальные трансферы"
-  url = "/ru/individual-transfers/"
-  weight = 2
-
-[[main]]
-  identifier = "group-transfers"
-  name = "Групповые трансферы"
-  url = "/ru/group-transfers/"
-  weight = 3
+  identifier = "kopaonik"
+  name = "Копаоник"
+  url = "/ru/kopaonik/"
+  parent = "serbia"
+  weight = 1
 
 [[main]]
   identifier = "about"
   name = "О нас"
   url = "/ru/about/"
-  weight = 4
+  weight = 2
 
 [[main]]
   identifier = "contact"
   name = "Контакты"
   url = "/ru/contact/"
-  weight = 5
-
-[[main]]
-  identifier = "blog"
-  name = "Блог"
-  url = "/ru/blog/"
-  weight = 6
+  weight = 3
