--- a/config/_default/menus.sr-latn.toml
+++ b/config/_default/menus.sr-latn.toml
@@ -1,35 +1,24 @@
 [[main]]
-  identifier = "airport-transfers"
-  name = "Aerodromski Transferi"
-  url = "/airport-transfers/"
+  identifier = "serbia"
+  name = "Srbija"
+  url = "#"
   weight = 1
 
 [[main]]
-  identifier = "individual-transfers"
-  name = "Individualni Transferi"
-  url = "/individual-transfers/"
-  weight = 2
-
-[[main]]
-  identifier = "group-transfers"
-  name = "Grupni Transferi"
-  url = "/group-transfers/"
-  weight = 3
+  identifier = "kopaonik"
+  name = "Kopaonik"
+  url = "/kopaonik/"
+  parent = "serbia"
+  weight = 1
 
 [[main]]
   identifier = "about"
   name = "O Nama"
   url = "/about/"
-  weight = 4
+  weight = 2
 
 [[main]]
   identifier = "contact"
   name = "Kontakt"
   url = "/contact/"
-  weight = 5
-
-[[main]]
-  identifier = "blog"
-  name = "Blog"
-  url = "/blog/"
-  weight = 6
+  weight = 3
