--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,36 @@
-# Hugo build output
+# Hugo output
 public/
-resources/
+resources/_gen/
 .hugo_build.lock
 hugo_stats.json
-assets/jsconfig.json
 
-# Executable may be added to repository
-hugo.exe
-hugo.darwin
-hugo.linux
-
-# Node / JS toolchains (if used for PostCSS/Tailwind/etc.)
+# Dependencies
 node_modules/
-.cache/
-dist/
-.vite/
-parcel-cache/
 
-# OS / Editor noise
+# OS-generated files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
-*.log
+
+# Editor directories and files
 .idea/
 .vscode/
-*.code-workspace
+*.suo
+*.ntvs
+*.njsproj
+*.sln
+*.sw?
+*~
 
-# Local env files (if any)
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Local environment files
 .env
-.env.*
-
-# Custom ignore rules can be added below this line
-reference/
-GEMINI.md
+.env.local
