feat: craiova page added.

--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -12,6 +12,12 @@
   weight = 1
 
 [[main]]
+  identifier = "craiova"
+  name = "Advent Craiova"
+  url = "/en/craiova/"
+  weight = 2
+
+[[main]]
   identifier = "about"
   name = "About"
   url = "/en/about/"
